[gd_scene load_steps=7 format=3 uid="uid://cpxo23gojvngq"]

[ext_resource type="Texture2D" uid="uid://byo1lorfm8471" path="res://Images/UI/notebook_open.png" id="1_kjn6p"]
[ext_resource type="Script" path="res://UI/Scenes/notebook.gd" id="1_pjd0k"]
[ext_resource type="Theme" path="res://Themes/notebook_text.tres" id="2_fwp36"]
[ext_resource type="Texture2D" uid="uid://cqhec8ipmsye5" path="res://Images/UI/arrow_r.png" id="4_65gpl"]
[ext_resource type="Texture2D" uid="uid://c7vrcggtouj2a" path="res://Images/UI/arrow_l.png" id="5_xcnod"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_2dmhf"]


[node name="Notebook" type="Node2D"]
script = ExtResource("1_pjd0k")

[node name="NotebookImgCont" type="VBoxContainer" parent="."]
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 60.0
offset_right = 1172.0
offset_bottom = 708.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0698132
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_fwp36")
alignment = 1

[node name="Notebook" type="CenterContainer" parent="NotebookImgCont"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_fwp36")

[node name="Sprite2D" type="Sprite2D" parent="NotebookImgCont/Notebook"]
position = Vector2(114, 0)
texture = ExtResource("5_gy7gq")
centered = false

[node name="Page1" type="Control" parent="NotebookImgCont/Notebook"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="LeftPageCont" type="VBoxContainer" parent="NotebookImgCont/Notebook/Page1"]
clip_contents = true
layout_mode = 2
offset_left = -440.0
offset_top = -300.0
offset_right = -73.0
offset_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="NotebookImgCont/Notebook/Page1/LeftPageCont"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page1/LeftPageCont/Header"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
text = "Band Name?!"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="NotebookImgCont/Notebook/Page1/LeftPageCont"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page1/LeftPageCont/HBoxContainer2"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
text = "MEMBERS
"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="NotebookImgCont/Notebook/Page1/LeftPageCont"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page1/LeftPageCont/HBoxContainer3"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
text = "Me: Vocals
I need to come up with a name for the band!
"
fit_content = true
scroll_active = false
autowrap_mode = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HBoxContainer4" type="HBoxContainer" parent="NotebookImgCont/Notebook/Page1/LeftPageCont"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page1/LeftPageCont/HBoxContainer4"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
text = "Josh: Drums
A former taiko drummer, now he has a girlfriend in another state. He swears.
"
fit_content = true
scroll_active = false
autowrap_mode = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HBoxContainer5" type="HBoxContainer" parent="NotebookImgCont/Notebook/Page1/LeftPageCont"]
visible = false
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page1/LeftPageCont/HBoxContainer5"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
text = "Benito: Bleeps and Bloops
Benny, Benny, Benny and the Jets!
"
fit_content = true
scroll_active = false
autowrap_mode = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="RightPageCont" type="VBoxContainer" parent="NotebookImgCont/Notebook/Page1"]
layout_mode = 2
offset_left = 8.0
offset_top = -300.0
offset_right = 375.0
offset_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page1/RightPageCont"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "Box Breathing:
Click and hold on the target to inhale
Release when the breath circle is within the black circle
Click and hold again to exhale
"
fit_content = true
autowrap_mode = 2

[node name="Page2" type="Control" parent="NotebookImgCont/Notebook"]
unique_name_in_owner = true
layout_mode = 2

[node name="LeftPageCont" type="VBoxContainer" parent="NotebookImgCont/Notebook/Page2"]
clip_contents = true
layout_mode = 2
offset_left = -440.0
offset_top = -300.0
offset_right = -73.0
offset_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="NotebookImgCont/Notebook/Page2/LeftPageCont"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page2/LeftPageCont/Header"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
text = "SETTINGS!"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="NotebookImgCont/Notebook/Page2/LeftPageCont"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page2/LeftPageCont/HBoxContainer2"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.0
text = "SFX Volume:"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="SFXVolLevel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page2/LeftPageCont/HBoxContainer2"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "
"
fit_content = true
scroll_active = false
autowrap_mode = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HSlider_sfx_vol" type="HSlider" parent="NotebookImgCont/Notebook/Page2/LeftPageCont"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../../../../ButtonL")
focus_neighbor_top = NodePath("../../../../../ButtonL")
focus_previous = NodePath("../../../../../ButtonL")

[node name="HBoxContainer3" type="HBoxContainer" parent="NotebookImgCont/Notebook/Page2/LeftPageCont"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page2/LeftPageCont/HBoxContainer3"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.0
text = "Music Volume:"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="MusVolLevel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page2/LeftPageCont/HBoxContainer3"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "
"
fit_content = true
scroll_active = false
autowrap_mode = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HSlider_mus_vol" type="HSlider" parent="NotebookImgCont/Notebook/Page2/LeftPageCont"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../../../../../ButtonL")
focus_neighbor_top = NodePath("../../../../../ButtonL")
focus_previous = NodePath("../../../../../ButtonL")

[node name="RightPageCont" type="VBoxContainer" parent="NotebookImgCont/Notebook/Page2"]
layout_mode = 2
offset_left = 8.0
offset_top = -300.0
offset_right = 375.0
offset_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page2/RightPageCont"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/normal_font_size = 30
text = "My song:
"
fit_content = true
autowrap_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="NotebookImgCont/Notebook/Page2/RightPageCont"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "I really hope I can write something before the open mic!"
fit_content = true
autowrap_mode = 2

[node name="ButtonR" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_direction = 1
offset_left = 1016.0
offset_top = 320.0
offset_right = 1131.0
offset_bottom = 372.0
rotation = -0.10472
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource("4_65gpl")

[node name="ButtonL" type="TextureButton" parent="."]
unique_name_in_owner = true
offset_left = 16.0
offset_top = 288.0
offset_right = 131.0
offset_bottom = 340.0
rotation = -0.139626
texture_normal = ExtResource("5_xcnod")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamWAV_2dmhf")
autoplay = true

[connection signal="drag_ended" from="NotebookImgCont/Notebook/Page2/LeftPageCont/HSlider_sfx_vol" to="." method="_on_h_slider_sfx_vol_drag_ended"]
[connection signal="drag_ended" from="NotebookImgCont/Notebook/Page2/LeftPageCont/HSlider_mus_vol" to="." method="_on_h_slider_mus_vol_drag_ended"]
[connection signal="drag_ended" from="NotebookImgCont/Notebook/Page2/LeftPageCont/HSlider_mus_vol" to="." method="_on_h_slider_vol_drag_ended"]
[connection signal="pressed" from="ButtonR" to="." method="_on_button_r_pressed"]
[connection signal="pressed" from="ButtonL" to="." method="_on_button_l_pressed"]
